# social-trending

./: .env.example  .gitignore  CONTEXT.md  Makefile  README.md  content_fetcher.py  crawler.py  crawler_hn.py  db.py  exporter.py  hackernews_crawler.py  hello.py  item_store.py  llm_utils.py  main.py  models.py  perspective_generator.py  pyproject.toml  test_crawler.py  transformer.py  utils.py
.github/workflows/: hackernews.yml
crawlers/: __init__.py  base.py  hn.py
docs/for_llm/: README.md  todos.md  v0.md
hackernews/: pyproject.toml
hackernews/src/hackernews/: __init__.py  client.py  log.py  models.py  util.py
hackernews/tests/: test_util.py
tests/: test_content_fetcher.py  test_exporter.py  test_hn_crawler.py  test_item_store.py  test_main.py  test_perspective_generator.py  test_pipeline_e2e.py  test_transformer.py
util/: pyproject.toml
util/logging/: log.py
