[project]
name = "social-trending"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "litellm>=1.57.5",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
lint = [
    "ruff>=0.9.0",
]
dev = [
    "gitpython>=3.1.44",
    "pytest>=8.3.4",
    "ruff>=0.9.0",
]
