[project]
name = "social-trending"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "hackernews",
    "litellm>=1.57.5",
    "pydantic>=2.10.5",
    "python-dotenv>=1.0.1",
    "trafilatura>=2.0.0",
]

[dependency-groups]
lint = [
    "ruff>=0.9.0",
]
dev = [
    "gitpython>=3.1.44",
    "pytest>=8.3.4",
    "ruff>=0.9.0",
]

[tool.uv.sources]
hackernews = { git = "https://github.com/RoCry/hackernews" }
