[project]
name = "hackernews"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "RoCry", email = "crysheen@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
hackernews = "hackernews:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
