[project]
name = "hackernews"
version = "0.1.0"
description = "A simple async HackerNews API client"
readme = "README.md"
authors = [
    { name = "RoCry", email = "crysheen@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "trafilatura>=2.0.0",
]

[project.scripts]
hackernews = "hackernews:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]
